--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
-    <h1>Milestone 4: Editable Dynamic Interactive Resume Builder</h1>
+    <h1>Milestone 5: Editable Dynamic Interactive Resume Builder</h1>
     <br>
     <form id="resume">
         <fieldset>
@@ -82,7 +82,7 @@
 
 
     <footer>
-        <p>&copy; 2024 Created by Arsalan Ahmed. All rights reserved.</p>
+        <p>&copy; 2024 Created by Sultan Ahmed. All rights reserved.</p>
     </footer>
     
     <script src="scriptnew.js"></script>
